--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -6,9 +6,9 @@
 
 {% block content %}
   <form method="post">
-    <label for="username">TEMP Username</label>
+    <label for="username">TUsername</label>
     <input name="username" id="username" required>
-    <label for="password">TEMP Password</label>
+    <label for="password">TPassword</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
   </form>
